# easyredir

./: CMakeLists.txt  LICENSE  README.md  cfg.cmake.in  entry.h  main.c  posix.c  win.c
app/: main.c
cfg/: app.cmake.in  lib.cmake.in
lib/: easyredir-link.h  easyredir-link.h.in  easyredir.h  entry.c  posix.c  win.c
src/: entry.h  posix.c  win.c
